Add jvm argument for java 9+