@@ -17,3 +17,9 @@ dependencies {
     compile('org.springframework:spring-aop:5.2.8.RELEASE')
     testCompile('junit:junit:4.12')
 }
+
+test {
+    if (!JavaVersion.current().isJava8()) {
+        jvmArgs "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED"
+    }
+}
